fix: flexbox overflow about page

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -50,6 +50,7 @@ main
     position: relative
     width: 100%
     max-width: 100%
+    flex-shrink: 0
     // border-top: 1px solid blue
     border-bottom: 0px solid var(--type)
     background: var(--background-color)
